@@ -7818,6 +7818,8 @@ rb_thread_select(max, read, write, except, timeout)
 
 			tv.tv_sec = (unsigned int)d;
 			tv.tv_usec = (long)((d-(double)tv.tv_sec)*1e6);
+			if (tv.tv_sec < 0)  tv.tv_sec = 0;
+			if (tv.tv_usec < 0) tv.tv_usec = 0;
 		    }
 		    continue;
 		  default:
